--- a/NETMouse - .NET release/NETMouse - .NET release.csproj
+++ b/NETMouse - .NET release/NETMouse - .NET release.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Extensions\MatricesExtensions.cs" />
     <Compile Include="Extensions\RandomExtensions.cs" />
     <Compile Include="Extensions\StringBuilderExtensions.cs" />
-    <Compile Include="Extensions\TuplesExtensions.cs" />
+    <Compile Include="Extensions\Tup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Arr.cs" />
     <Compile Include="Utils\Base.cs" />
