--- a/NETMouse - .NET release/NETMouse - .NET release.csproj
+++ b/NETMouse - .NET release/NETMouse - .NET release.csproj
@@ -53,8 +53,7 @@
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Extensions\KeyValuePairExtensions.cs" />
     <Compile Include="Extensions\MatricesExtensions.cs" />
-    <Compile Include="Extensions\RandomExtensions.cs" />
-    <Compile Include="Extensions\StringBuilderExtensions.cs" />
+    <Compile Include="Extensions\StringBuilder.cs" />
     <Compile Include="Extensions\Tup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Arr.cs" />
