--- a/NETMouse - .NET release/NETMouse - .NET release.csproj
+++ b/NETMouse - .NET release/NETMouse - .NET release.csproj
@@ -49,12 +49,12 @@
     <Compile Include="Debug\DictionaryDebugView.cs" />
     <Compile Include="Debug\Generic\CollectionDebugView.cs" />
     <Compile Include="Debug\Generic\DictionaryDebugView.cs" />
-    <Compile Include="Extensions\Base.cs" />
-    <Compile Include="Extensions\IEnumerableExtensions.cs" />
-    <Compile Include="Extensions\KeyValuePairExtensions.cs" />
-    <Compile Include="Extensions\MatricesExtensions.cs" />
-    <Compile Include="Extensions\StringBuilder.cs" />
-    <Compile Include="Extensions\Tup.cs" />
+    <Compile Include="Extensions\BaseExt.cs" />
+    <Compile Include="Extensions\SeqExt.cs" />
+    <Compile Include="Extensions\KVExt.cs" />
+    <Compile Include="Extensions\MatrExt.cs" />
+    <Compile Include="Extensions\StringBuilderExt.cs" />
+    <Compile Include="Extensions\TupExt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Arr.cs" />
     <Compile Include="Utils\Base.cs" />
