--- a/NETMouse - .NET release/ABCNET.csproj
+++ b/NETMouse - .NET release/ABCNET.csproj
@@ -6,8 +6,8 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>NETMouse___.NET_release</RootNamespace>
-    <AssemblyName>NETMouse - .NET release</AssemblyName>
+    <RootNamespace>ABCNET</RootNamespace>
+    <AssemblyName>ABCNET</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
   </PropertyGroup>
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\ArrExt.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Debug\CollectionDebugView.cs" />
     <Compile Include="Debug\DictionaryDebugView.cs" />
