--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Welcome to NETMouse projects! We hope that you like our company. :)'
-        pr-message: 'Welcome to NETMouse projects! We hope that you like our company. :)'
+        issue-message: 'Добро пожаловать в NETMouse projects! Мы надеемся, что Вам понравится наша компания. :)'
+        pr-message: 'Добро пожаловать в NETMouse projects! Мы надеемся, что Вам понравится наша компания. :)'
