--- a/NETMouse - .NET release/ABCNET.csproj
+++ b/NETMouse - .NET release/ABCNET.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\ArrExt.cs" />
+    <Compile Include="Extensions\StrExt.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Extensions\BaseExt.cs" />
     <Compile Include="Extensions\SeqExt.cs" />
