transfer NumerateRes and AssociateRes into corresponding files

--- a/NETMouse - .NET release/ABCNET.csproj
+++ b/NETMouse - .NET release/ABCNET.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\ArrExt.cs" />
+    <Compile Include="Extensions\AssociateRes.cs" />
+    <Compile Include="Extensions\NumerateRes.cs" />
     <Compile Include="Extensions\StrExt.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Extensions\BaseExt.cs" />
