--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -17,4 +17,5 @@ jobs:
         stale-issue-label: '➥ STALE'
         stale-pr-label: '➥ STALE'
         exempt-issue-label: '➥ SUPPRESS "STALE"'
+        exempt-pr-label: '➥ SUPPRESS "STALE"'
         days-before-stale: 14
