--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -1,7 +1,7 @@
 name: Labeler
 on:
   issues:
-    types: [opened, edited]
+    types: [opened, edited, pinned, unpinned, reopened, assigned, unassigned, labeled, unlabeled, milestoned, demilestoned]
 
 jobs:
   label:
