--- a/.github/workflows/areaLabeler.yml
+++ b/.github/workflows/areaLabeler.yml
@@ -1,4 +1,4 @@
-name: AreaLabeler
+name: Area-Labeler
 on:
   issues:
     types: [opened, edited, pinned, unpinned, reopened, assigned, unassigned, labeled, unlabeled, milestoned, demilestoned]
