--- a/.github/workflows/importanceLabeler.yml
+++ b/.github/workflows/importanceLabeler.yml
@@ -1,4 +1,4 @@
-name: importance-Labeler
+name: Importance-Labeler
 on:
   issues:
     types: [opened, edited, pinned, unpinned, reopened, assigned, unassigned, labeled, unlabeled, milestoned, demilestoned]
