--- a/.github/workflows/milestoneLabeler.yml
+++ b/.github/workflows/milestoneLabeler.yml
@@ -1,4 +1,4 @@
-name: Area-Labeler
+name: Milestone-Labeler
 on:
   issues:
     types: [opened, edited, pinned, unpinned, reopened, assigned, unassigned, labeled, unlabeled, milestoned, demilestoned]
