--- a/.github/workflows/areaLabeler.yml
+++ b/.github/workflows/areaLabeler.yml
@@ -1,7 +1,7 @@
 name: Area-Labeler
 on:
   issues:
-    types: [opened, edited, pinned, unpinned, reopened, assigned, unassigned, labeled, unlabeled, milestoned, demilestoned]
+    types: [opened]
 
 jobs:
   label:
