--- a/NETMouse - .NET release/ABCNET.csproj
+++ b/NETMouse - .NET release/ABCNET.csproj
@@ -47,6 +47,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utils\Tup.UserInput.cs">
+      <DependentUpon>Tup.cs</DependentUpon>
+    </Compile>
     <None Include="Examples\C#\Arrays_1.cs" />
     <None Include="Examples\C#\Arrays_10.cs" />
     <None Include="Examples\C#\Arrays_11.cs" />
@@ -84,10 +87,34 @@
     <Compile Include="Extensions\TupExt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Arr.cs" />
+    <Compile Include="Utils\Arr.Generators.cs">
+      <DependentUpon>Arr.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\Arr.UserInput.cs">
+      <DependentUpon>Arr.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\Base.cs" />
-    <Compile Include="Utils\Seq.cs" />
+    <Compile Include="Utils\Base.Other.cs">
+      <DependentUpon>Base.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\Base.UserInput.cs">
+      <DependentUpon>Base.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\Matr.cs" />
+    <Compile Include="Utils\Matr.Generators.cs">
+      <DependentUpon>Matr.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\Matr.UserInput.cs">
+      <DependentUpon>Matr.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\Seq.cs" />
+    <Compile Include="Utils\Seq.Generators.cs">
+      <DependentUpon>Seq.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\Tup.cs" />
+    <Compile Include="Utils\Tup.Generators.cs">
+      <DependentUpon>Tup.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Examples\C#\ABCNET.dll" />
