--- a/NETMouse - .NET release/ABCNET.csproj
+++ b/NETMouse - .NET release/ABCNET.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Utils\Sequence.Generators.cs">
       <DependentUpon>Sequence.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utils\SortedDictionary.cs" />
     <Compile Include="Utils\Tuple.Generators.cs">
       <DependentUpon>Tuple.cs</DependentUpon>
     </Compile>
