closes #113 - HashSet.cs

--- a/NETMouse - .NET release/ABCNET.csproj
+++ b/NETMouse - .NET release/ABCNET.csproj
@@ -114,6 +114,7 @@
       <DependentUpon>Base.cs</DependentUpon>
     </Compile>
     <Compile Include="Utils\Dictionary.cs" />
+    <Compile Include="Utils\HashSet.cs" />
     <Compile Include="Utils\Matrix.cs" />
     <Compile Include="Utils\Matrix.Generators.cs">
       <DependentUpon>Matrix.cs</DependentUpon>
