--- a/NETMouse - .NET release/ABCNET.csproj
+++ b/NETMouse - .NET release/ABCNET.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Utils\Dictionary.cs" />
     <Compile Include="Utils\HashSet.cs" />
     <Compile Include="Utils\LinkedList.cs" />
+    <Compile Include="Utils\List.cs" />
     <Compile Include="Utils\Matrix.cs" />
     <Compile Include="Utils\Matrix.Generators.cs">
       <DependentUpon>Matrix.cs</DependentUpon>
